update name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stadistics-plugin",
+  "name": "ct-stadistics-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
