--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ct-stadistics-plugin",
+  "name": "ct-statistics-plugin",
   "version": "1.3.1",
   "description": "",
   "main": "index.js",
