--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "ct-statistics-plugin",
-  "version": "1.3.1",
+  "name": "sd-ct-statistics-plugin",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "updatedb": "node node_modules/geoip-lite/scripts/updatedb.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "Control Tower",
+    "statistics",
+    "microservice"
+  ],
+  "author": {
+    "name": "Vizzuality",
+    "email": "hello@vizzuality.com",
+    "url": "http://vizzuality.com/"
+  },
+  "contributors": [
+    {
+      "name": "Raul Requero"
+    },
+    {
+      "name": "Sergio Gordillo"
+    },
+    {
+      "name": "Enrique Cornejo"
+    },
+    {
+      "name": "Tiago Garcia",
+      "url": "https://github.com/tiagojsag"
+    }
+  ],
+  "license": "MIT",
   "dependencies": {
     "app-module-path": "^2.0.0",
     "bluebird": "^3.4.1",
